--- a/src/app/component/footer/footer.component.html
+++ b/src/app/component/footer/footer.component.html
@@ -1,1 +1,6 @@
-<p>footer works!</p>
+
+<footer class="bg-gray-800 text-white py-4">
+    <div class="container mx-auto">
+        <p>footer works!</p>
+    </div>
+</footer>
