--- a/src/app/component/list-box/list-box.component.html
+++ b/src/app/component/list-box/list-box.component.html
@@ -1,5 +1,7 @@
 <div class="flex justify-between">
   <div id="boxName" class="w-1/2">
+    <h1>Cart</h1>
+    <hr>
 
   </div>
   <div id="prixTotal"></div>
