mise en place de l'app Market

--- a/src/app/component/header/header.component.html
+++ b/src/app/component/header/header.component.html
@@ -32,26 +32,22 @@
     </div>
     <div class="flex-grow text-center space-x-3">
         <a href="#" class="text-black text-lg hover:text-[#EC6135] ">Home</a>
-        <a href="#" class="text-black text-lg hover:text-[#EC6135] ">About</a>
-        <a href="#" class="text-black text-lg hover:text-[#EC6135] ">Foods</a>
-        <a href="#" class="text-black text-lg hover:text-[#EC6135]">Menu</a>
+        <a href="#" class="text-black text-lg hover:text-[#EC6135] ">Menu</a>
+        <a href="#" class="text-black text-lg hover:text-[#EC6135] ">Boissons</a>
+       
     </div>
 
     <div>
-        <button class="bg-[#EC6135] hover:bg-orange-700 text-white font-bold py-2 px-4 rounded">
-           Contact Us
-        </button>
+        
     </div>
 </div>
 
 <div *ngIf="isMenuOpen" class="md:hidden">
     <div class="bg-black    p-4">   
         <a href="#" class="block text-white mb-2">Home</a>
-        <a href="#" class="block text-white mb-2">About</a>
-        <a href="#" class="block text-white mb-2">Foods</a>
         <a href="#" class="block text-white mb-2">Menu</a>
-        <button class="bg-[#EC6135] hover:bg-orange-700 text-white font-bold py-2 px-4 rounded mt-4">
-            Contact Us
-        </button>
+        <a href="#" class="block text-white mb-2">Boissons</a>
+   
+       
     </div>
 </div>
