--- a/src/app/component/footer/footer.component.html
+++ b/src/app/component/footer/footer.component.html
@@ -1,95 +1,48 @@
 
+        <div class="elt1 max-w-max mt-8">
+            <img src="../../../assets/Neko.png" alt="Neko" class="w-40 h-40 lg:w-52 lg:h-52 duration-500 hover:scale-95">
+        </div>
 
-<footer style="" class="bg-white dark:bg-gray-900" style="width: 75%;">
-    <div class="mx-auto max-w-screen-xl p-4 py-6 lg:py-8">
-  
+        <div class="elt2 max-w-max mt-6">
+            <div class="flex flex-col justify-center items-center">
+                <h3 class="text-orange-brozer text-2xl">Navigation</h3>
+                <div class="footer-elt-nav">
+                    <ul class="font-bold">
+                        <li class="hover:underline cursor-pointer">Home</li>
+                        <li class="hover:underline cursor-pointer">About</li>
+                        <li class="hover:underline cursor-pointer">Menu</li>
+                        <li class="hover:underline cursor-pointer">Foods</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+        
+        <div class="elt3 max-w-max mt-8">
+            <div class="flex flex-col justify-center items-center">
+                <h3 class="text-orange-brozer text-2xl">Contact</h3>
+                <div class="footer-elt-nav">
+                    <ul class="font-bold">
+                        <li class="hover:underline cursor-pointer">+33 01 62 78 90 18</li>
+                        <li class="hover:underline cursor-pointer">contact@zushi.com</li>
+                    </ul>
+                </div>
+                <div class="picto flex flex-row items-center mt-3">
+                    <svg width="30" height="30" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg" class="mx-2 duration-500 hover:scale-95 cursor-pointer">
+                        <path d="M5.8 0H14.2C17.4 0 20 2.6 20 5.8V14.2C20 15.7383 19.3889 17.2135 18.3012 18.3012C17.2135 19.3889 15.7383 20 14.2 20H5.8C2.6 20 0 17.4 0 14.2V5.8C0 4.26174 0.61107 2.78649 1.69878 1.69878C2.78649 0.61107 4.26174 0 5.8 0ZM5.6 2C4.64522 2 3.72955 2.37928 3.05442 3.05442C2.37928 3.72955 2 4.64522 2 5.6V14.4C2 16.39 3.61 18 5.6 18H14.4C15.3548 18 16.2705 17.6207 16.9456 16.9456C17.6207 16.2705 18 15.3548 18 14.4V5.6C18 3.61 16.39 2 14.4 2H5.6ZM15.25 3.5C15.5815 3.5 15.8995 3.6317 16.1339 3.86612C16.3683 4.10054 16.5 4.41848 16.5 4.75C16.5 5.08152 16.3683 5.39946 16.1339 5.63388C15.8995 5.8683 15.5815 6 15.25 6C14.9185 6 14.6005 5.8683 14.3661 5.63388C14.1317 5.39946 14 5.08152 14 4.75C14 4.41848 14.1317 4.10054 14.3661 3.86612C14.6005 3.6317 14.9185 3.5 15.25 3.5ZM10 5C11.3261 5 12.5979 5.52678 13.5355 6.46447C14.4732 7.40215 15 8.67392 15 10C15 11.3261 14.4732 12.5979 13.5355 13.5355C12.5979 14.4732 11.3261 15 10 15C8.67392 15 7.40215 14.4732 6.46447 13.5355C5.52678 12.5979 5 11.3261 5 10C5 8.67392 5.52678 7.40215 6.46447 6.46447C7.40215 5.52678 8.67392 5 10 5ZM10 7C9.20435 7 8.44129 7.31607 7.87868 7.87868C7.31607 8.44129 7 9.20435 7 10C7 10.7956 7.31607 11.5587 7.87868 12.1213C8.44129 12.6839 9.20435 13 10 13C10.7956 13 11.5587 12.6839 12.1213 12.1213C12.6839 11.5587 13 10.7956 13 10C13 9.20435 12.6839 8.44129 12.1213 7.87868C11.5587 7.31607 10.7956 7 10 7Z" fill="#EC6135"/>
+                    </svg>
+                    <svg width="30" height="30" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg" class="mx-2 duration-500 hover:scale-95 cursor-pointer">
+                        <path d="M16 0C16.5304 0 17.0391 0.210714 17.4142 0.585786C17.7893 0.960859 18 1.46957 18 2V16C18 16.5304 17.7893 17.0391 17.4142 17.4142C17.0391 17.7893 16.5304 18 16 18H2C1.46957 18 0.960859 17.7893 0.585786 17.4142C0.210714 17.0391 0 16.5304 0 16V2C0 1.46957 0.210714 0.960859 0.585786 0.585786C0.960859 0.210714 1.46957 0 2 0H16ZM15.5 15.5V10.2C15.5 9.33539 15.1565 8.5062 14.5452 7.89483C13.9338 7.28346 13.1046 6.94 12.24 6.94C11.39 6.94 10.4 7.46 9.92 8.24V7.13H7.13V15.5H9.92V10.57C9.92 9.8 10.54 9.17 11.31 9.17C11.6813 9.17 12.0374 9.3175 12.2999 9.58005C12.5625 9.8426 12.71 10.1987 12.71 10.57V15.5H15.5ZM3.88 5.56C4.32556 5.56 4.75288 5.383 5.06794 5.06794C5.383 4.75288 5.56 4.32556 5.56 3.88C5.56 2.95 4.81 2.19 3.88 2.19C3.43178 2.19 3.00193 2.36805 2.68499 2.68499C2.36805 3.00193 2.19 3.43178 2.19 3.88C2.19 4.81 2.95 5.56 3.88 5.56ZM5.27 15.5V7.13H2.5V15.5H5.27Z" fill="#EC6135"/>
+                    </svg>
+                    <svg width="34" height="30" viewBox="0 0 24 20" fill="none" xmlns="http://www.w3.org/2000/svg" class="mx-2 duration-500 hover:scale-95 cursor-pointer">
+                        <path d="M0 0.865014V5.86201C0 7.74501 1.332 8.99201 3.084 8.99201C3.48294 8.99801 3.87899 8.92343 4.24842 8.77273C4.61785 8.62204 4.95307 8.39833 5.234 8.11501V8.85801H6.445V0.864014H5.223V5.79801C5.223 7.06301 4.353 7.91801 3.228 7.92001C2.089 7.91801 1.231 7.08601 1.231 5.79801V0.865014H0ZM7.363 0.865014V8.85801H8.525V8.12601C8.80314 8.40406 9.13337 8.62455 9.49679 8.77486C9.86022 8.92518 10.2497 9.00236 10.643 9.00201C11.0492 9.01243 11.4533 8.94142 11.8316 8.79318C12.2099 8.64493 12.5547 8.42245 12.8457 8.13886C13.1367 7.85526 13.3679 7.51628 13.5258 7.1419C13.6837 6.76752 13.765 6.36532 13.765 5.95901C13.765 5.5527 13.6837 5.1505 13.5258 4.77613C13.3679 4.40175 13.1367 4.06277 12.8457 3.77917C12.5547 3.49557 12.2099 3.27309 11.8316 3.12485C11.4533 2.97661 11.0492 2.9056 10.643 2.91601C10.2514 2.91574 9.86355 2.99301 9.50192 3.14336C9.14029 3.29371 8.81201 3.51416 8.536 3.79201V0.865014H7.363ZM17.248 2.92101C16.8499 2.9193 16.4554 2.99627 16.0871 3.1475C15.7188 3.29873 15.384 3.52123 15.102 3.80223C14.82 4.08323 14.5963 4.41719 14.4437 4.78492C14.2911 5.15265 14.2127 5.54689 14.213 5.94501C14.213 7.68201 15.586 8.98201 17.366 8.98201C17.8603 8.99211 18.35 8.88469 18.7947 8.66859C19.2394 8.4525 19.6265 8.1339 19.924 7.73901L19.074 7.12101C18.8804 7.39201 18.6237 7.61176 18.3261 7.76126C18.0285 7.91075 17.699 7.9855 17.366 7.97901C16.8938 7.98488 16.4353 7.82103 16.0737 7.51729C15.7122 7.21356 15.4717 6.79011 15.396 6.32401H20.213V5.94501C20.213 4.21101 18.959 2.92101 17.249 2.92101H17.248ZM23.411 2.98701C23.1349 2.98461 22.863 3.05394 22.6218 3.18822C22.3806 3.32249 22.1784 3.51711 22.035 3.75301V3.03401H20.872V8.85801H22.046V5.54601C22.046 4.64401 22.605 4.06201 23.373 4.06201H23.868V2.98901L23.411 2.98701ZM17.208 3.93101C17.6392 3.92515 18.0588 4.07062 18.3939 4.34211C18.729 4.61361 18.9583 4.99395 19.042 5.41701H15.424C15.506 5.00238 15.728 4.6285 16.0528 4.35798C16.3775 4.08747 16.7854 3.93673 17.208 3.93101ZM10.549 3.93701C10.8144 3.93688 11.0772 3.98903 11.3225 4.09047C11.5677 4.19191 11.7906 4.34067 11.9784 4.52824C12.1661 4.71582 12.3151 4.93854 12.4168 5.18369C12.5185 5.42884 12.5709 5.69161 12.571 5.95701C12.5711 6.22241 12.519 6.48524 12.4175 6.73049C12.3161 6.97574 12.1673 7.19861 11.9798 7.38637C11.7922 7.57413 11.5695 7.7231 11.3243 7.82479C11.0792 7.92648 10.8164 7.97888 10.551 7.97901C10.0185 7.97461 9.50944 7.75961 9.135 7.38101C8.7597 7.00297 8.54937 6.49171 8.55 5.95901C8.54911 5.42646 8.75907 4.91522 9.134 4.53701C9.50787 4.15792 10.0166 3.94221 10.549 3.93701ZM0 10.987V18.958H5.722V17.591H1.546V15.621H5.61V14.306H1.545V12.351H5.721V10.986L0 10.987ZM14.56 11.397V13.082H13.41V14.42H14.564V17.563C14.564 18.356 15.136 18.984 16.164 18.984H17.807L17.801 17.646H16.66C16.312 17.646 16.088 17.496 16.088 17.182V14.414H17.8V13.082H16.094V11.396L14.56 11.397ZM9.263 12.924C8.85186 12.9229 8.44461 13.0035 8.06489 13.1612C7.68518 13.3188 7.34057 13.5503 7.05111 13.8423C6.76164 14.1343 6.53308 14.4808 6.37871 14.8619C6.22434 15.243 6.14723 15.6509 6.15187 16.062C6.15651 16.4731 6.2428 16.8792 6.40573 17.2567C6.56865 17.6342 6.80497 17.9755 7.10095 18.2609C7.39693 18.5462 7.74667 18.7699 8.12985 18.919C8.51302 19.068 8.92199 19.1394 9.333 19.129C10.0287 19.1362 10.7052 18.9007 11.246 18.463V18.995H12.763V13.082H11.254V13.608C10.7132 13.1633 10.0341 12.9214 9.334 12.924H9.263ZM21.034 12.931C19.449 12.931 18.334 13.575 18.334 14.817C18.334 15.677 18.947 16.238 20.27 16.512L21.718 16.84C22.288 16.95 22.44 17.099 22.44 17.33C22.44 17.701 22.002 17.933 21.313 17.933C20.437 17.933 19.935 17.743 19.74 17.085H18.207C18.427 18.316 19.364 19.135 21.256 19.135H21.258C23.01 19.135 24 18.316 24 17.182C24 16.376 23.415 15.774 22.191 15.515L20.897 15.255C20.146 15.119 19.909 14.981 19.909 14.709C19.909 14.352 20.27 14.134 20.939 14.134C21.661 14.134 22.191 14.326 22.344 14.981H23.862C23.776 13.752 22.871 12.931 21.034 12.931ZM9.468 14.181C10.478 14.191 11.287 15.018 11.275 16.028C11.2753 16.2667 11.2281 16.503 11.1362 16.7233C11.0443 16.9435 10.9095 17.1433 10.7397 17.311C10.5699 17.4787 10.3684 17.611 10.147 17.7001C9.92556 17.7892 9.68864 17.8333 9.45 17.83C8.96624 17.8276 8.50325 17.6332 8.16287 17.2894C7.82249 16.9457 7.63261 16.4808 7.635 15.997C7.63739 15.5133 7.83185 15.0503 8.1756 14.7099C8.51936 14.3695 8.98425 14.1786 9.468 14.181Z" fill="#EC6135"/>
+                    </svg>
+                </div>
+            </div>
+        </div>
 
-<footer class="bg-white dark:bg-gray-900">
-    <div class="mx-auto w-full max-w-screen-xl p-4 py-6 lg:py-8">
-        <div class="md:flex md:justify-between">
-          <div class="mb-6 md:mb-0">
-              <a href="https://flowbite.com/" class="flex items-center">
-                  <img src="../../../assets/Logo.svg"/>
-              </a>
-          </div>
-          <div class="grid grid-cols-2 gap-8 sm:gap-6 sm:grid-cols-3">
-              <div>
-                  <h2 class="mb-6 text-sm font-semibold text-gray-900 uppercase dark:text-white">Resources</h2>
-                  <ul class="text-gray-500 dark:text-gray-400 font-medium">
-                      <li class="mb-4">
-                          <a href="" class="hover:underline">Angular</a>
-                      </li>
-                      <li>
-                          <a href="" class="hover:underline">Symfony</a>
-                      </li>
-                      
-                      
-                  </ul>
-              </div>
-              <div>
-                  <h2 class="mb-6 text-sm font-semibold text-gray-900 uppercase dark:text-white">Le Projet</h2>
-                  <ul class="text-gray-500 dark:text-gray-400 font-medium">
-                      <li class="mb-4">
-                          <a href="" class="hover:underline ">Github Front</a>
-                      </li>
-                      <li class="mb-4">
-                        <a href="" class="hover:underline ">Github Back</a>
-                    </li>
-                      
-                  </ul>
-              </div>
-              <div>
-                  <h2 class="mb-6 text-sm font-semibold text-gray-900 uppercase dark:text-white">Legal</h2>
-                  <ul class="text-gray-500 dark:text-gray-400 font-medium">
-                      <li class="mb-4">
-                          <a href="#" class="hover:underline">Privacy Policy</a>
-                      </li>
-                      <li>
-                          <a href="#" class="hover:underline">Terms &amp; Conditions</a>
-                      </li>
-                  </ul>
-              </div>
-          </div>
-      </div>
-      <hr class="my-6 border-gray-200 sm:mx-auto dark:border-gray-700 lg:my-8" />
-      <div class="sm:flex sm:items-center sm:justify-between">
-          <span class="text-sm text-gray-500 sm:text-center dark:text-gray-400">© 2023 <a href="https://flowbite.com/" class="hover:underline">Zushi™</a>. All Rights Reserved.
-          </span>
-          <div class="flex mt-4 sm:justify-center sm:mt-0">
-              <a href="#" class="text-gray-500 hover:text-gray-900 dark:hover:text-white">
-                  <svg class="w-4 h-4" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 8 19">
-                        <path fill-rule="evenodd" d="M6.135 3H8V0H6.135a4.147 4.147 0 0 0-4.142 4.142V6H0v3h2v9.938h3V9h2.021l.592-3H5V3.591A.6.6 0 0 1 5.592 3h.543Z" clip-rule="evenodd"/>
-                    </svg>
-                  <span class="sr-only">Facebook page</span>
-              </a>
-              <a href="#" class="text-gray-500 hover:text-gray-900 dark:hover:text-white ms-5">
-                  <svg class="w-4 h-4" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 21 16">
-                        <path d="M16.942 1.556a16.3 16.3 0 0 0-4.126-1.3 12.04 12.04 0 0 0-.529 1.1 15.175 15.175 0 0 0-4.573 0 11.585 11.585 0 0 0-.535-1.1 16.274 16.274 0 0 0-4.129 1.3A17.392 17.392 0 0 0 .182 13.218a15.785 15.785 0 0 0 4.963 2.521c.41-.564.773-1.16 1.084-1.785a10.63 10.63 0 0 1-1.706-.83c.143-.106.283-.217.418-.33a11.664 11.664 0 0 0 10.118 0c.137.113.277.224.418.33-.544.328-1.116.606-1.71.832a12.52 12.52 0 0 0 1.084 1.785 16.46 16.46 0 0 0 5.064-2.595 17.286 17.286 0 0 0-2.973-11.59ZM6.678 10.813a1.941 1.941 0 0 1-1.8-2.045 1.93 1.93 0 0 1 1.8-2.047 1.919 1.919 0 0 1 1.8 2.047 1.93 1.93 0 0 1-1.8 2.045Zm6.644 0a1.94 1.94 0 0 1-1.8-2.045 1.93 1.93 0 0 1 1.8-2.047 1.918 1.918 0 0 1 1.8 2.047 1.93 1.93 0 0 1-1.8 2.045Z"/>
-                    </svg>
-                  <span class="sr-only">Discord community</span>
-              </a>
-              <a href="#" class="text-gray-500 hover:text-gray-900 dark:hover:text-white ms-5">
-                  <svg class="w-4 h-4" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 20 17">
-                    <path fill-rule="evenodd" d="M20 1.892a8.178 8.178 0 0 1-2.355.635 4.074 4.074 0 0 0 1.8-2.235 8.344 8.344 0 0 1-2.605.98A4.13 4.13 0 0 0 13.85 0a4.068 4.068 0 0 0-4.1 4.038 4 4 0 0 0 .105.919A11.705 11.705 0 0 1 1.4.734a4.006 4.006 0 0 0 1.268 5.392 4.165 4.165 0 0 1-1.859-.5v.05A4.057 4.057 0 0 0 4.1 9.635a4.19 4.19 0 0 1-1.856.07 4.108 4.108 0 0 0 3.831 2.807A8.36 8.36 0 0 1 0 14.184 11.732 11.732 0 0 0 6.291 16 11.502 11.502 0 0 0 17.964 4.5c0-.177 0-.35-.012-.523A8.143 8.143 0 0 0 20 1.892Z" clip-rule="evenodd"/>
-                </svg>
-                  <span class="sr-only">Twitter page</span>
-              </a>
-              <a href="#" class="text-gray-500 hover:text-gray-900 dark:hover:text-white ms-5">
-                  <svg class="w-4 h-4" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 20 20">
-                        <path fill-rule="evenodd" d="M10 .333A9.911 9.911 0 0 0 6.866 19.65c.5.092.678-.215.678-.477 0-.237-.01-1.017-.014-1.845-2.757.6-3.338-1.169-3.338-1.169a2.627 2.627 0 0 0-1.1-1.451c-.9-.615.07-.6.07-.6a2.084 2.084 0 0 1 1.518 1.021 2.11 2.11 0 0 0 2.884.823c.044-.503.268-.973.63-1.325-2.2-.25-4.516-1.1-4.516-4.9A3.832 3.832 0 0 1 4.7 7.068a3.56 3.56 0 0 1 .095-2.623s.832-.266 2.726 1.016a9.409 9.409 0 0 1 4.962 0c1.89-1.282 2.717-1.016 2.717-1.016.366.83.402 1.768.1 2.623a3.827 3.827 0 0 1 1.02 2.659c0 3.807-2.319 4.644-4.525 4.889a2.366 2.366 0 0 1 .673 1.834c0 1.326-.012 2.394-.012 2.72 0 .263.18.572.681.475A9.911 9.911 0 0 0 10 .333Z" clip-rule="evenodd"/>
-                  </svg>
-                  <span class="sr-only">GitHub account</span>
-              </a>
-              <a href="#" class="text-gray-500 hover:text-gray-900 dark:hover:text-white ms-5">
-                  <svg class="w-4 h-4" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 20 20">
-                    <path fill-rule="evenodd" d="M10 0a10 10 0 1 0 10 10A10.009 10.009 0 0 0 10 0Zm6.613 4.614a8.523 8.523 0 0 1 1.93 5.32 20.094 20.094 0 0 0-5.949-.274c-.059-.149-.122-.292-.184-.441a23.879 23.879 0 0 0-.566-1.239 11.41 11.41 0 0 0 4.769-3.366ZM8 1.707a8.821 8.821 0 0 1 2-.238 8.5 8.5 0 0 1 5.664 2.152 9.608 9.608 0 0 1-4.476 3.087A45.758 45.758 0 0 0 8 1.707ZM1.642 8.262a8.57 8.57 0 0 1 4.73-5.981A53.998 53.998 0 0 1 9.54 7.222a32.078 32.078 0 0 1-7.9 1.04h.002Zm2.01 7.46a8.51 8.51 0 0 1-2.2-5.707v-.262a31.64 31.64 0 0 0 8.777-1.219c.243.477.477.964.692 1.449-.114.032-.227.067-.336.1a13.569 13.569 0 0 0-6.942 5.636l.009.003ZM10 18.556a8.508 8.508 0 0 1-5.243-1.8 11.717 11.717 0 0 1 6.7-5.332.509.509 0 0 1 .055-.02 35.65 35.65 0 0 1 1.819 6.476 8.476 8.476 0 0 1-3.331.676Zm4.772-1.462A37.232 37.232 0 0 0 13.113 11a12.513 12.513 0 0 1 5.321.364 8.56 8.56 0 0 1-3.66 5.73h-.002Z" clip-rule="evenodd"/>
-                </svg>
-                  <span class="sr-only">Dribbble account</span>
-              </a>
-          </div>
-      </div>
-    </div>
-</footer>
+        <div class="elt4 max-w-max mt-8">
+            <img src="../../../assets/ordernow.png" alt="ordernow" class="w-32 h-32 lg:w-40 lg:h-40 duration-500 hover:scale-95">
+        </div>
 
     </div>
 </footer>
