--- a/src/app/component/header-static/header-static.component.html
+++ b/src/app/component/header-static/header-static.component.html
@@ -1,5 +1,7 @@
 
 <nav class=" p-4 md:p-8 flex justify-between items-center md:hidden sm:items-stretch mt-4">
+
+<nav class=" p-4 md:p-8 flex justify-between items-center md:hidden sm:items-stretch mt-4">
     <div>
         <svg width="150" height="115" viewBox="0 0 230 115" fill="none" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
             <path d="M132.196 71.8811L110.956 70.3978L111.468 65.4943L123.827 55.0136L109.725 54.5408L110.004 48.9636H129.721L129.981 55.4282L120.847 65.6109L133.031 66.5825L132.202 71.8811H132.196Z" fill="#1D1D1B"/>
