--- a/src/app/component/landing/landing.component.html
+++ b/src/app/component/landing/landing.component.html
@@ -1,4 +1,9 @@
+
+
+
 <app-header-static></app-header-static>
+
+<app-about></app-about>
 <app-hero></app-hero>
 <app-about></app-about>
 <app-food></app-food>
