Food et bandeau

--- a/src/app/component/landing/landing.component.html
+++ b/src/app/component/landing/landing.component.html
@@ -1,9 +1,6 @@
-
-
-
 <app-header-static></app-header-static>
 <app-hero></app-hero>
-
-
 <app-about></app-about>
+<app-food></app-food>
+<app-bandeau></app-bandeau>
 <app-footer></app-footer>
