Page menu et détails

--- a/src/app/component/about/about.component.html
+++ b/src/app/component/about/about.component.html
@@ -1,7 +1,7 @@
 
-<div id="about" class="flex flex-col lg:flex-row justify-between items-center bg-black text-white z-50 relative">
-    <div class="text-justify mx-4 w-full mb-8 md:mb-0 sm:mx-4 lg:w-6/12">
-        <h1 class="text-5xl mt-9 md:text-7xl sm:text-5xl mb-6 md:mb-12 text-[#EC6135] px-9 justify-self-start">01 | ABOUT</h1>
+<div id="about" class="flex flex-col lg:flex-row justify-between items-center bg-black text-white z-50 relative px-10">
+    <div class="text-justify mx-4 w-full mb-8 md:mb-0 sm:mx-4">
+        <h1 class="text-5xl md:text-7xl md:mb-12 text-[#EC6135] my-9 self-start">01 | ABOUT</h1>
         <p class="mb-6 px-9 lg:w-full">
             Bienvenue dans l'univers enchanteur de Zushi, un oasis de saveurs japonaises niché au cœur de la vibrante ville de Paris.
             Notre établissement est bien plus qu'un simple restaurant ; c'est un hommage vibrant à la riche tradition culinaire du Japon,
