--- a/src/app/component/menu/menu.component.html
+++ b/src/app/component/menu/menu.component.html
@@ -1,5 +1,5 @@
 
-<div id="about" class="flex flex-col justify-between items-center bg-black text-white z-50 relative px-10">
+<div id="menu" class="flex flex-col justify-between items-center bg-black text-white z-50 relative px-10">
     <div class="text-justify mx-4 w-full mb-8 md:mb-0 sm:mx-4 flex flex-col">
         <h1 class="text-5xl md:text-7xl md:mb-12 text-[#EC6135] my-9 self-start">03 | MENU</h1>
         <div class="flex flex-col items-center gap-8">
