--- a/src/app/component/list-box/list-box.component.html
+++ b/src/app/component/list-box/list-box.component.html
@@ -1,63 +1,104 @@
+<aside
+  class="hidden md:block"
+  style="
+    background-image: url(&quot;../../../assets/img_market.png&quot;);
+    background-size: cover;
+    z-index: 3;
+    background-position: right;
+    height: 100vh;
+    width: 20%;
+    position: fixed;
+    right: 0;
+  "
+></aside>
 
-
-
-
-
-
-<aside class="hidden md:block" style="background-image: url('../../../assets/img_market.png'); background-size: cover; z-index: 3; background-position: right; height: 100vh; width: 20%; position: fixed; right: 0;"></aside>
-
-<div  >
+<div>
   <app-header></app-header>
-
-
 </div>
-<br>
-<h1  style="margin-left: 3%;"class=" mx-7 font-bold text-5xl"> Bienvenue sur le board de commande Zushi !</h1>
-<div class="flex justify-center items-center space-x-20 border-2 border-orange-600" style="
-    margin-top: 4%;
-">
-  <div style="margin-left:12%;" class="w-1/2 mt-20 d-flex " style="overflow-y: scroll; overflow-x: scroll; max-height: 700px; max-width: 900px;">
-    <div *ngFor="let item of boxes; let i = index" class="mb-4 flex flex-col space-x-20 justify-center">
-      <div style="align-items: center;
-      gap: 8px; padding:20px;" class="flex align-center space-x-10 ">
-      <div style="margin-left:10%;" class="flex flex-col  ">
-
-     
-        <img src="{{item.img}}" alt="{{item.nom}}" width="300" height="300"><span class="font-bold text-xl">{{ item.nom }} </span> <span class="font-bold">{{ item.prix.toFixed(2) }}€</span>
-      </div>
-      <div class="flex flex-col">
-      <div class="text-xl font-bold">Compositions</div>
-        <div *ngFor="let aliments of item.id_aliments">
-          <div class="w-100" >
-            {{aliments.quantite }} x     {{aliments.nom }} 
+<br />
+<h1 style="margin-left: 3%" class="mx-7 font-bold text-5xl">
+  Bienvenue sur le board de commande Zushi !
+</h1>
+<div
+  class="flex justify-center items-center space-x-20 border-2 border-orange-600"
+  style="margin-top: 4%"
+>
+  <div
+    style="margin-left: 12%"
+    class="w-1/2 mt-20 d-flex"
+    style="
+      overflow-y: scroll;
+      overflow-x: scroll;
+      max-height: 700px;
+      max-width: 900px;
+    "
+  >
+    <div
+      *ngFor="let item of boxes; let i = index"
+      class="mb-4 flex flex-col space-x-20 justify-center"
+    >
+      <div
+        style="align-items: center; gap: 8px; padding: 20px"
+        class="flex align-center space-x-10"
+      >
+        <div style="margin-left: 10%" class="flex flex-col">
+          <img
+            src="{{ item.img }}"
+            alt="{{ item.nom }}"
+            width="300"
+            height="300"
+          /><span class="font-bold text-xl">{{ item.nom }} </span>
+          <span class="font-bold">{{ item.prix.toFixed(2) }}€</span>
+        </div>
+        <div class="flex flex-col">
+          <div class="text-xl font-bold">Compositions</div>
+          <div *ngFor="let aliments of item.id_aliments">
+            <div class="w-100">
+              {{ aliments.quantite }} x {{ aliments.nom }}
+            </div>
           </div>
+        </div>
+
+        <div class="flex gap-2 space-x-0 flex-row">
+          <button
+            style="padding: 10px"
+            (click)="incrementAndDisplay(item.id)"
+            class="bg-[#EC6135] hover:bg-green-700 text-white spac font-bold py-2 px-4"
+          >
+            +
+          </button>
+
+          <button
+            style="padding: 10px"
+            (click)="decrementAndDisplay(item.id)"
+            class="bg-[#EC6135] hover:bg-red-700 text-white font-bold py-2 px-4"
+          >
+            -
+          </button>
         </div>
       </div>
 
-      <div class="flex gap-2 space-x-0 flex-row">
-        
-        <button style="padding:10px;" (click)="incrementAndDisplay(item.id)" class="bg-[#EC6135] hover:bg-green-700 text-white spac font-bold py-2 px-4 ">
-          +
-        </button>
-   
-        <button style="padding:10px;" (click)="decrementAndDisplay(item.id)" class="bg-[#EC6135] hover:bg-red-700 text-white font-bold py-2 px-4 ">
-          -
-        </button>
-
-      </div>
-      </div>
-     
-      
-      <br><br>
+      <br /><br />
     </div>
   </div>
-  <div class="w-1/2 space-x-50 ">
+  <div class="w-1/2 space-x-50">
     <div id="boxName" class="w-1/2"></div>
-    <div  class="d-flex  "style="font-weight: bold;"id="prixTotal"></div>
+    <div class="d-flex" style="font-weight: bold" id="prixTotal"></div>
 
-    <div  style="margin-top:35%;" class="flex gap-2  ">
-      <button style="padding: 10px;" class="bg-red-500 gap-2 px-10 py-10 hover:bg-blue-700 text-white font-bold py-2 px-4" (click)="cancelOrders()">Annuler</button>
-      <a routerLink="/recap"><button class="flex items-center gap-2 px-10 py-10 font-sans text-xs font-bold text-center text-gray-900 uppercase align-middle transition-all select-none disabled:opacity-50 disabled:shadow-none disabled:pointer-events-none hover:bg-gray-900/10 active:bg-gray-900/20" style="padding: 10px;" type="button" (click)="concatenateOrders(this.orders)">
+    <div style="margin-top: 35%" class="flex gap-2">
+      <button
+        style="padding: 10px"
+        class="bg-red-500 gap-2 px-10 py-10 hover:bg-blue-700 text-white font-bold py-2 px-4"
+        (click)="cancelOrders()"
+      >
+        Annuler
+      </button>
+      <button
+        class="flex items-center gap-2 px-10 py-10 font-sans text-xs font-bold text-center text-gray-900 uppercase align-middle transition-all select-none disabled:opacity-50 disabled:shadow-none disabled:pointer-events-none hover:bg-gray-900/10 active:bg-gray-900/20"
+        style="padding: 10px"
+        type="button"
+        (click)="concatenateOrders(this.orders)"
+      >
         Commander
         
         <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" class="w-5 h-5">
@@ -65,12 +106,9 @@
         </svg>
       </button></a>
     </div>
-   
-  
-    
+
   </div>
 </div>
-
 
 <aside class="hidden md:block bg-cover z-10 bg-right h-screen w-1/5 fixed right-0" style="background-image: url('../../../assets/img_market.png');"></aside>
 <aside class="hidden md:block bg-cover z-10 bg-right h-screen w-1/5 fixed right-0" style="background-image: url('../../../assets/img_market.png');"></aside>
