--- a/src/app/component/list-box/list-box.component.css
+++ b/src/app/component/list-box/list-box.component.css
@@ -2,3 +2,10 @@
     padding:0;
     margin:0;
 }
+
+@import url('https://fonts.cdnfonts.com/css/the-bold-font');
+@import url('https://fonts.cdnfonts.com/css/satoshi');
+
+* {
+    font-family: 'Satoshi';
+}
