--- a/src/app/component/recap/recap.component.html
+++ b/src/app/component/recap/recap.component.html
@@ -35,7 +35,7 @@
       <div class="p-4 md:p-0 md: mt-[50%] ">
 
       <button routerLink="/board" (click)="PasseCommande()" class=" p-4 bg-[#EC6135] text-white flex flex-row hover:bg-green-700">
-        <div class="flex flex-col x-space-2"><div class="text-left text-md xl:text-xl">Valider la commande </div><div class="text-left text-xl xl:text-2xl">{{ date.prixTotal }} € TTC</div>  </div><svg width="56" height="56" viewBox="0 0 56 56" fill="none" xmlns="http://www.w3.org/2000/svg">
+        <div class="flex flex-col x-space-2"><div class="text-left text-md xl:text-xl">Valider la commande </div><div class="text-left text-xl xl:text-2xl">{{ date.prixTotal.toFixed(2) }} € TTC</div>  </div><svg width="56" height="56" viewBox="0 0 56 56" fill="none" xmlns="http://www.w3.org/2000/svg">
           <path d="M20.4378 35.9585L35.7068 19.2166M35.7068 19.2166L19.7013 19.953M35.7068 19.2166L36.4433 35.2221" stroke="white" stroke-width="3.23702" stroke-linecap="round" stroke-linejoin="round"/>
           </svg>
           
