Ajout du formulaire de contact et de la fonction mail

--- a/src/app/component/header-static/header-static.component.html
+++ b/src/app/component/header-static/header-static.component.html
@@ -45,7 +45,7 @@
         <a href="#menu" class="text-black text-lg  duration-200 hover:text-[#EC6135]  active:text-[#EC6135]underline">Menu</a>
     </div>
     <div>
-        <button class="p-4 bg-[#EC6135] rounded-full font-bold py-3 px-9 border border-black hover:scale-105 duration-200 cursor-pointer active:scale-95">Contact Us</button>
+        <button class="p-4 bg-[#EC6135] rounded-full font-bold py-3 px-9 border border-black hover:scale-105 duration-200 cursor-pointer active:scale-95" routerLink="contact">Nous contacter</button>
        
     </div>
 
@@ -61,7 +61,7 @@
         <a href="#food" class="text-black text-lg duration-200 hover:text-[#EC6135] ">Foods</a>
         <a href="#menu" class="text-black text-lg duration-200 hover:text-[#EC6135] ">Menu</a>
         <div>
-            <button class=" bg-[#EC6135] rounded-full py-1 px-3 border border-black hover:scale-105 duration-200 cursor-pointer active:scale-95">Contact Us</button>
+            <button class=" bg-[#EC6135] rounded-full py-1 px-3 border border-black hover:scale-105 duration-200 cursor-pointer active:scale-95" routerLink="contact">Nous contacter</button>
            
         </div>
     </div>
