--- a/src/app/component/footer/footer.component.html
+++ b/src/app/component/footer/footer.component.html
@@ -1,4 +1,6 @@
 <footer>
+    <div class="w-full flex flex-col md:flex-row md:justify-around justify-center items-center">
+
         <div class="elt1 max-w-max mt-8">
             <img src="../../../assets/Neko.png" alt="Neko" class="w-40 h-40 lg:w-52 lg:h-52 duration-500 hover:scale-95">
         </div>
@@ -8,10 +10,10 @@
                 <h3 class="text-orange-brozer text-2xl">Navigation</h3>
                 <div class="footer-elt-nav">
                     <ul class="font-bold">
-                        <li class="hover:underline cursor-pointer">Home</li>
-                        <li class="hover:underline cursor-pointer">About</li>
-                        <li class="hover:underline cursor-pointer">Menu</li>
-                        <li class="hover:underline cursor-pointer">Foods</li>
+                        <a href="#"><li class="hover:underline cursor-pointer">Home</li></a>
+                        <a href="#about"><li class="hover:underline cursor-pointer">About</li></a>
+                        <a href="#food"><li class="hover:underline cursor-pointer">Foods</li></a>
+                        <a href="#menu"><li class="hover:underline cursor-pointer">Menu</li></a>
                     </ul>
                 </div>
             </div>
