--- a/src/app/component/recap/recap.component.html
+++ b/src/app/component/recap/recap.component.html
@@ -12,17 +12,13 @@
   "
 ></aside>
 
-<div>
-  <app-header></app-header>
-
-</div>
 <div class="flex flex-col justify-center items-center  md:p-6 md:items-start md:justify-start">
   <h1 class="text-xl lg:text-4xl">Récapitulatif de commande</h1>
   <div class="border-t border-gray-700 my-4">
     <div *ngFor="let date of commandeArray" class="mt-2 md:flex md:flex-col md:justify-start md:items-start   
     ">
       <p class="text-center lg:text-xl xl:text-2xl">Date de la commande:<br /></p>
-      <p class="text-center font-bold lg:text-md xl:text-xl">{{ date.date | date }}</p>
+      <p class="text-center font-bold lg:text-md xl:text-xl">{{ date.date  }}</p>
 
       <div class="md:flex md:flex-col md:justify-start md:items-start lg:mt-5">
         <h3 class="text-center font-bold lg:text-xl xl:text-2xl">Boxs:</h3>
