--- a/src/app/component/recap/recap.component.html
+++ b/src/app/component/recap/recap.component.html
@@ -11,7 +11,7 @@
     right: 0;
   "
 ></aside>
-
+<app-header></app-header>
 <div class="flex flex-col justify-center items-center  md:p-6 md:items-start md:justify-start">
   <h1 class="text-xl lg:text-4xl">Récapitulatif de commande</h1>
   <div class="border-t border-gray-700 my-4">
