fin du site manque poffinage si besoin

--- a/src/app/component/header/header.component.html
+++ b/src/app/component/header/header.component.html
@@ -31,9 +31,9 @@
              
     </div>
     <div class="flex-grow text-center space-x-3">
-        <a href="#a" class="text-black text-lg hover:text-[#EC6135] ">Home</a>
-        <a href="#" class="text-black text-lg hover:text-[#EC6135] ">Menu</a>
-        <a href="#" class="text-black text-lg hover:text-[#EC6135] ">Boissons</a>
+        <a href="#" class="text-black text-lg hover:text-[#EC6135] ">Retourner à l'acceuil</a>
+        <a href="/board" class="text-black text-lg hover:text-[#EC6135] ">Menu</a>
+
        
     </div>
 
