--- a/src/app/component/header-static/header-static.component.html
+++ b/src/app/component/header-static/header-static.component.html
@@ -47,7 +47,7 @@
         <a href="#menu" class="text-black text-lg  duration-200 hover:text-[#EC6135]  active:text-[#EC6135]underline">Menu</a>
     </div>
     <div>
-        <button class="p-4 bg-[#EC6135] rounded-full font-bold py-3 px-9 border border-black hover:scale-105 duration-200 cursor-pointer active:scale-95">Contact Us</button>
+        <a href="/contact"><button class="p-4 bg-[#EC6135] rounded-full font-bold py-3 px-9 border border-black hover:scale-105 duration-200 cursor-pointer active:scale-95">Contact Us</button></a>
        
     </div>
 
