--- a/src/app/component/menu/menu.component.html
+++ b/src/app/component/menu/menu.component.html
@@ -6,7 +6,7 @@
             <h1 class="text-3xl mt-12 text-orange-brozer sm:text-4xl md:text-5xl lg:mb-8">NOS BEST SELLERS</h1>
             <div class="flex flex-col lg:flex-row gap-8 mb-8 items-center justify-around lg:mb-14 xl:gap-20 xl:mb-20 2xl:gap-32">
 
-                <div class="w-56 bg-white rounded-lg flex flex-col items-center px-2 sm:w-72 md:w-80 2xl:w-96 hover:scale-105 duration-200 cursor-pointer active:scale-95">
+               <a href="/board"> <div class="w-56 bg-white rounded-lg flex flex-col items-center px-2 sm:w-72 md:w-80 2xl:w-96 hover:scale-105 duration-200 cursor-pointer active:scale-95">
                     <img src="../../../assets/super-salmon.jpg" alt="mix gourmet" class="h-auto w-56 py-5 sm:w-72 md:w-80 2xl:w-96">
                     <hr class="border-black w-full mb-1">
                     <p class="text-black self-start sm:text-lg md:text-xl 2xl:text-2xl">Le Super-Salmon</p>
@@ -17,12 +17,12 @@
                         </svg>
                         <span class="text-black md:text-lg 2xl:text-xl">15€90</span>
                     </div>
-                </div>
+                </div></a>
 
-                <div class="w-56 bg-white rounded-lg flex flex-col items-center px-2 sm:w-72 md:w-80 2xl:w-96 hover:scale-105 duration-200 cursor-pointer active:scale-95">
+                <a href="/board"><div class="w-56 bg-white rounded-lg flex flex-col items-center px-2 sm:w-72 md:w-80 2xl:w-96 hover:scale-105 duration-200 cursor-pointer active:scale-95">
                     <img src="../../../assets/fresh-mix.jpg" alt="mix gourmet" class="h-auto w-56 py-5 sm:w-72 md:w-80 2xl:w-96">
                     <hr class="border-black w-full mb-1">
-                    <p class="text-black self-start sm:text-lg md:text-xl 2xl:text-2xl">Le Frash Mix</p>
+                    <p class="text-black self-start sm:text-lg md:text-xl 2xl:text-2xl">Le Fresh Mix</p>
                     <p class="text-black text-xs self-start mb-9 sm:text-sm 2xl:text-base">Un mélange de fraicheur et de saveur</p>
                     <div class="self-start flex flex-row items-center justify-between w-full mb-2">
                         <svg width="150" height="7" viewBox="0 0 161 7" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -30,9 +30,9 @@
                         </svg>
                         <span class="text-black md:text-lg 2xl:text-xl">15€90</span>
                     </div>
-                </div>
+                </div></a>
 
-                <div class="w-56 bg-white rounded-lg flex flex-col items-center px-2 sm:w-72 md:w-80 2xl:w-96 hover:scale-105 duration-200 cursor-pointer active:scale-95">
+                <a href="/board"><div class="w-56 bg-white rounded-lg flex flex-col items-center px-2 sm:w-72 md:w-80 2xl:w-96 hover:scale-105 duration-200 cursor-pointer active:scale-95">
                     <img src="../../../assets/gourmet-mix.jpg" alt="mix gourmet" class="h-auto w-56 py-5 sm:w-72 md:w-80 2xl:w-96">
                     <hr class="border-black w-full mb-1">
                     <p class="text-black self-start sm:text-lg md:text-xl 2xl:text-2xl">La Gourmet-Mix</p>
@@ -43,15 +43,16 @@
                         </svg>
                         <span class="text-black md:text-lg 2xl:text-xl">15€90</span>
                     </div>
-                </div>
+                </div></a>
 
             </div>
-            <button class="flex flex-row bg-orange-brozer items-center justify-center gap-3 py-2 px-3 rounded-full sm:px-4 sm:py-3 md:px-6 2xl:px-8 2xl:py-4 mb-8 hover:scale-105 duration-200 cursor-pointer active:scale-95">
+            <a  href="/rgpd" class="flex flex-row text-md items-center justify-center     sm:px-4 sm:py-3 md:px-6 2xl:px-8 2xl:py-4 mb-8 hover:scale-105 duration-200 cursor-pointer active:scale-95"> Voir nos conditions RGPD</a>
+           <a href="/board"> <button class="flex flex-row bg-orange-brozer items-center justify-center gap-3 py-2 px-3 rounded-full sm:px-4 sm:py-3 md:px-6 2xl:px-8 2xl:py-4 mb-8 hover:scale-105 duration-200 cursor-pointer active:scale-95">
                 <span class="text-white md:text-lg xl:text-xl">Commander</span>
                 <svg width="100" height="7" viewBox="0 0 161 7" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path d="M160.492 3.39062L155.303 0.394271V6.38698L160.492 3.39062ZM0.645386 3.90961H155.822V2.87164H0.645386V3.90961Z" fill="white"/>
                 </svg>
-            </button>
+            </button></a>
         </div>
     </div>
 </div>
