--- a/src/app/component/valid/valid.component.html
+++ b/src/app/component/valid/valid.component.html
@@ -13,10 +13,10 @@
 ></aside>
 <app-header></app-header>
 <div class="flex flex-col justify-center items-center p-3 md:flex md:flex-col md:justify-start md:items-start md:text-xl" *ngIf="Commandes == true">
-    <div class="w-1/2 md:w-1/4"><img src="../../../assets/20944096.jpg"/></div>
+    <div class="w-1/2 flex flex-col justify-center items-center md:w-1/4"><div class="loader"></div></div>
     <div class="text-xl font-bold">Commande validée</div>
     <div class="text-center">Votre commande sera prête pour réception dans 15 minutes !</div>
-    <div class="text-center"> Vous allez être redirigé vers l'acceuil dans 2 secondes</div>
+    <div class="text-center"> Vous allez être redirigé vers l'acceuil dans quelques instants</div>
 
 
 </div>
