--- a/src/app/component/header/header.component.html
+++ b/src/app/component/header/header.component.html
@@ -21,7 +21,7 @@
     <button (click)="toggleMenu()" class="text-white focus:outline-none">
         <svg class="h-6 w-6" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
             <path fill-rule="evenodd" clip-rule="evenodd" d="M4 6h16v2H4V6zm0 5h16v2H4v-2zm0 5h16v2H4v-2z" fill="black" />
-        </svg>x
+        </svg>
     </button>
 </nav>
 
@@ -30,9 +30,9 @@
        <img width="150px;" src="../../../assets/Logo.svg"/>
              
     </div>
-    <div class="flex-grow text-center space-x-3">
-        <a href="#" class="text-black text-lg hover:text-[#EC6135] ">Retourner à l'acceuil</a>
-        <a href="/board" class="text-black text-lg hover:text-[#EC6135] ">Menu</a>
+    <div class="flex-grow text-center space-x-5">
+        <a href="#" class="text-black text-lg duration-300 hover:text-[#EC6135] ">Retourner à l'acceuil</a>
+        <a href="/board" class="text-black text-lg duration-300 hover:text-[#EC6135] ">Menu</a>
 
        
     </div>
@@ -44,9 +44,8 @@
 
 <div *ngIf="isMenuOpen" class="md:hidden">
     <div class="bg-black    p-4">   
-        <a href="#" class="block text-white mb-2">Home</a>
+        <a href="#" class="block text-white mb-2">Retourner à l'accueil</a>
         <a href="#" class="block text-white mb-2">Menu</a>
-        <a href="#" class="block text-white mb-2">Boissons</a>
    
        
     </div>
